2002-04-29  Mo DeJong  <supermo@bayarea.net>

	* configure: Regen.
	* configure.in: Bump version to 5.1.0.

2002-04-29  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (FileDialog): Remove the
	-multiple argument to the file dialog boxes.
	This was a local modification to the Tk 8.1
	sources for tkFDialog and tk_getOpenFile.
	* gui/projedit.tcl (add_files): Remove the
	-multiple argument to Editor&::FileDialog.
	* gui/targetedit.tcl (import_files): Ditto.

2002-04-26  Mo DeJong  <supermo@bayarea.net>

	* hyper/recudir.c: Cast return values from
	ckalloc to avoid warnings from VC++. Cast
	values passed to ckfree for the same reason.
	* misc/libutils/mxfuncs.h: Undefine EXTERN
	before defining it to avoid compiler warning.
	* parsers/cpp/cpplib/macro.c: Avoid compiler
	warning by including longstr.h to access the
	function prototype for SN_StrDup. Use NULL
	instead of the literal 0.
	* parsers/tcl/Scanner.c: Include string.h
	to avoid compiler warning because of lack
	of prototypes for functions like strchr.

2002-04-26  Mo DeJong  <supermo@bayarea.net>

	* db/dbcp.c: Include compat.h before db.h
	to avoid undefined type error when building
	with VC++.

2002-04-25  Mo DeJong  <supermo@bayarea.net>

	* Makefile.am: Remove BUILD_GREP conditional
	install rule.
	* Makefile.in: Regen.
	* config.h.in: Regen.
	* configure: Regen.
	* configure.in: Check for sys/param.h header.
	Check for u_char type. Remove special VC++ flags
	from WINFLAGS since they are no longer needed.
	Add WINFLAGS settings for mingw.
	Remove check of the system's grep, we no longer
	include a grep module so this is not needed.
	* bitmaps/Makefile.in: Regen.
	* db/Makefile.am: Add snavigator/misc
	to include search directories. Fixup CFLAGS
	assignment to use = instead of +=.
	* db/Makefile.in: Regen.
	* db/dbcp.c: Include <compat.h>.
	* db/dbimp.c: Include <config.h> and <compat.h>.
	Conditionally include <unistd.h>
	* db/dbutils.c: Ditto.
	* db/dbutils.h: Remove WIN32 conditional around